--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_quill_extensions: ^11.0.0
   intl: ^0.20.2
   path: ^1.9.1
+  sqflite: ^2.4.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
